# ValTracker.gg

./: .dockerignore  .env.example  .gitignore  .vercelignore  AGENTS.md  DOCUMENTATION.md  Dockerfile  README.md  api.py  app.py  build.bat  build.sh  build_vct_2026.py  check.js  check_js.py  check_js_ast.py  check_server.py  check_specific.py  check_teams.py  find_ids.py  find_main.py  find_main_end.py  find_parents.py  find_xlg.py  fix_all_teams.py  fix_missing.py  fix_names.py  fix_teams.py  fn.txt  gunicorn.conf.py  kill_server.py  old_f0657aa.html  old_index.html  old_ver.html  pyproject.toml  render.yaml  requirements.txt  scrape_events.py  scrape_rosters.py  scrape_vct.py  (+15 more)
frontend/: astro.config.mjs  package-lock.json  package.json
public/: 404.html  index.css  index.html  index.js  landing.html  landing.js  lineups.json  manifest.json  overlay.css  overlay.html  overlay.js  sw.js  vct_pro_comps.json  vct_teams.json
scratch/: add_sw_cleanup.py  apply_coach.py  apply_site_diagnostics.py  apply_tactical.py  buildMatchAnalysis.js  bump_css_version.py  check_api.py  check_bundle_uuid.py  check_css.py  check_db.py  check_deployment.py  check_direct_query.py  check_header_deployment.py  check_html_js.py  check_live_css_version.py  check_live_deployment_status.py  check_live_spikerush.py  check_meta_api.py  check_player.py  check_render.py  check_route.py  clean_html_styles.py  clean_html_styles_complete.py  clean_html_styles_robust.py  compress_assets.py  delete_player.py  evaluateDraft.js  extract_full.py  extract_scripts.py  fetch_maps.py  fetch_videos.py  (+68 more)
(+116 files in other folders)
