[project]
name = "valtracker-api"
version = "1.0.0"
description = "ValTracker API Backend"
requires-python = ">=3.9"
dependencies = [
    "Flask==3.1.3",
    "requests==2.32.5",
    "python-dotenv==1.2.2",
    "Flask-Cors==6.0.2",
    "gunicorn==21.2.0",
    "beautifulsoup4==4.12.3",
    "pyjsparser==2.7.1"
]

[tool.vercel]
entrypoint = "api:app"
